--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ html{
 }
 body{
 
-    background: #080808;
+    background: #000000;
     color: #fff;
 }
 
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background3.png);
+    background-image: url(images/nice-new.png);
     background-size: cover;
     background-position: center;
 
@@ -48,7 +48,7 @@ nav ul li{
 }
 
 nav ul li a{
-    color: rgb(0, 0, 0);
+    color: rgb(206, 184, 184);
     text-decoration: none;
     font-size: 20px;
     position: relative;
@@ -71,17 +71,19 @@ nav ul li a:hover::after{
 
 .header-text{
     padding-top: 10px;
-    margin-top: 10%;
-    font-size: 35px;
-    color: rgb(133, 18, 93);
+    
+    margin-top: 5;
+    font-size: 40px;
+    color: rgb(200, 224, 223);
 }
 .header-text h1{
-    font-size: 50px;
+    
+    font-size: 45px;
     margin-top: 20px;
-    color: #060606;
+    color: #222121;
 }
 .header-text h1 span{
-    color: rgb(193, 14, 68);
+    color: rgb(190, 8, 74);
 }
 
 
@@ -100,6 +102,7 @@ nav ul li a:hover::after{
 .about-col-1{
     flex-basis: 35%;    
 }
+
 
 .about-col-1 img{
     width: 180px;
@@ -174,7 +177,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div{
-background-color: #262626;
+background-color: #0d0554;
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
@@ -205,7 +208,7 @@ background-color: #262626;
 }
 
 .services-list div:hover{
-    background-color: #6d2eb1;
+    background-color: #bd2626;
     transform: translateY(-10px);
 
 }
@@ -391,7 +394,7 @@ nav .fas{
 
 @media only screen and (max-with: 600px){
     #header{
-        background-image: url(images/phone-background1.png);
+        background-image: url(images/small\ pic.png);
     }
     .header-text{
         margin-top: 100%;
