--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/nice-new.png);
+    background-image: url(images/nice.png);
     background-size: cover;
     background-position: center;
 
@@ -269,7 +269,7 @@ background-color: #0d0554;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
-    background: yellow;
+    background: blue;
     width: 60px;
     height: 60px;
     border-radius: 50%;
